feat: insert burger based on order ID